Viewport scroll prevention now takes scrollbar gutter into account.

--- a/omnipedia_site/stylesheets/global/_layout.overlay.scss
+++ b/omnipedia_site/stylesheets/global/_layout.overlay.scss
@@ -8,4 +8,15 @@
 
 html.omnipedia-overlay-open {
   overflow-y: hidden;
+
+  // This uses the scrollbar gutter component's custom property, when available,
+  // to prevent layout shifting when the scrollbars are hidden versus when
+  // they're visible, on platforms where the scrollbars take up space and aren't
+  // floating on top of content, i.e. usually desktop.
+  @include root-conditions(('[dir=ltr]'), 'html') {
+    padding-right: var(--scrollbar-gutter, 0) !important;
+  }
+  @include root-conditions(('[dir=rtl]'), 'html') {
+    padding-left: var(--scrollbar-gutter, 0) !important;
+  }
 }
